--- a/Rouster/Base.lproj/Main.storyboard
+++ b/Rouster/Base.lproj/Main.storyboard
@@ -130,7 +130,7 @@
                                 <attributedString key="attributedText">
                                     <fragment content="What time will you wake up?">
                                         <attributes>
-                                            <color key="NSColor" red="0.89030934343434343" green="0.70129714927961517" blue="0.82796844039544737" alpha="1" colorSpace="calibratedRGB"/>
+                                            <color key="NSColor" red="0.8901960784313725" green="0.82745098039215681" blue="0.027450980392156862" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <font key="NSFont" size="25" name="Roboto-Regular"/>
                                             <font key="NSOriginalFont" size="17" name="Copperplate"/>
                                             <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="wordWrapping" baseWritingDirection="natural"/>
@@ -139,34 +139,32 @@
                                 </attributedString>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="or7-Xu-Ila">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="or7-Xu-Ila">
                                 <rect key="frame" x="217" y="425" width="166" height="21"/>
                                 <color key="backgroundColor" red="0.9215686917" green="0.98431378599999997" blue="0.2117647231" alpha="1" colorSpace="deviceRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="21" id="EFM-pC-IFX"/>
-                                    <constraint firstAttribute="width" constant="166" id="ooy-3r-Noy"/>
-                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="STEPS:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mnt-9R-pkS">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="STEPS:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mnt-9R-pkS">
                                 <rect key="frame" x="217" y="403" width="166" height="21"/>
                                 <color key="backgroundColor" red="0.9215686917" green="0.98431378599999997" blue="0.2117647231" alpha="1" colorSpace="deviceRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="166" id="H2H-EC-vpk"/>
-                                    <constraint firstAttribute="height" constant="21" id="WgH-wH-IeO"/>
+                                    <constraint firstAttribute="width" constant="166" id="HwT-a4-QP9"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="wordWrap" translatesAutoresizingMaskIntoConstraints="NO" id="awu-qY-Xxf">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="wordWrap" translatesAutoresizingMaskIntoConstraints="NO" id="awu-qY-Xxf">
                                 <rect key="frame" x="256" y="466" width="100" height="60"/>
                                 <color key="backgroundColor" red="0.47613105876613226" green="0.5684679824024117" blue="0.89141414141414144" alpha="0.089999999999999997" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="0lc-nl-6MJ"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="25"/>
                                 <state key="normal" title="Commit">
-                                    <color key="titleColor" red="0.89088147095959591" green="0.70197514112487536" blue="0.86664502105753716" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleColor" red="0.8901960784313725" green="0.82745098039215681" blue="0.027450980392156862" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
                                     <action selector="commitTime:" destination="J74-pY-bu3" eventType="touchUpInside" id="Hsf-iS-z5I"/>
@@ -175,20 +173,25 @@
                         </subviews>
                         <color key="backgroundColor" red="0.73147533669999998" green="0.80463199460000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstAttribute="trailingMargin" secondItem="Gho-Vp-BHL" secondAttribute="trailing" constant="-16" id="5CU-Dx-BYd"/>
+                            <constraint firstItem="or7-Xu-Ila" firstAttribute="leading" secondItem="Mnt-9R-pkS" secondAttribute="leading" id="0VL-79-7dQ"/>
                             <constraint firstItem="or7-Xu-Ila" firstAttribute="leading" secondItem="bID-KU-DyS" secondAttribute="leadingMargin" constant="201" id="6cW-Y5-gbp"/>
-                            <constraint firstItem="CTQ-ex-EU0" firstAttribute="top" secondItem="wCq-e8-AbN" secondAttribute="bottom" constant="86" id="Ecf-Bg-kFU"/>
-                            <constraint firstItem="Gho-Vp-BHL" firstAttribute="top" secondItem="bID-KU-DyS" secondAttribute="topMargin" id="Edy-ag-ZMP"/>
-                            <constraint firstAttribute="trailing" secondItem="PCL-in-h24" secondAttribute="trailing" id="MRP-Sl-VBH"/>
-                            <constraint firstItem="UjX-ot-vew" firstAttribute="top" secondItem="Gho-Vp-BHL" secondAttribute="bottom" id="VJt-WR-gaz"/>
-                            <constraint firstItem="PCL-in-h24" firstAttribute="centerY" secondItem="bID-KU-DyS" secondAttribute="centerY" id="dEe-4D-Rwq"/>
+                            <constraint firstItem="Gho-Vp-BHL" firstAttribute="bottom" secondItem="UjX-ot-vew" secondAttribute="top" id="DpK-tB-Szw"/>
+                            <constraint firstItem="PCL-in-h24" firstAttribute="leading" secondItem="Gho-Vp-BHL" secondAttribute="leading" id="LGY-pI-4uw"/>
+                            <constraint firstItem="PCL-in-h24" firstAttribute="centerY" secondItem="bID-KU-DyS" secondAttribute="centerY" id="LKN-IW-rzr"/>
+                            <constraint firstItem="PCL-in-h24" firstAttribute="leading" secondItem="bID-KU-DyS" secondAttribute="leading" id="MQp-W8-VuJ"/>
+                            <constraint firstItem="PCL-in-h24" firstAttribute="trailing" secondItem="Gho-Vp-BHL" secondAttribute="trailing" id="Pue-B2-dj8"/>
+                            <constraint firstItem="CTQ-ex-EU0" firstAttribute="top" secondItem="wCq-e8-AbN" secondAttribute="bottom" constant="86" id="UN9-GI-cA7"/>
+                            <constraint firstItem="awu-qY-Xxf" firstAttribute="leading" secondItem="bID-KU-DyS" secondAttribute="leading" constant="256" id="UwG-Pa-ijx"/>
+                            <constraint firstItem="or7-Xu-Ila" firstAttribute="top" secondItem="Mnt-9R-pkS" secondAttribute="bottom" constant="1" id="VxG-co-Fb7"/>
+                            <constraint firstItem="awu-qY-Xxf" firstAttribute="top" secondItem="or7-Xu-Ila" secondAttribute="bottom" constant="20" id="ZFr-2u-9dT"/>
+                            <constraint firstItem="Mnt-9R-pkS" firstAttribute="trailing" secondItem="or7-Xu-Ila" secondAttribute="trailing" id="gaW-n3-79C"/>
                             <constraint firstAttribute="trailingMargin" secondItem="or7-Xu-Ila" secondAttribute="trailing" constant="201" id="hTU-4u-Fby"/>
-                            <constraint firstItem="PCL-in-h24" firstAttribute="leading" secondItem="bID-KU-DyS" secondAttribute="leading" id="jbX-R6-T09"/>
-                            <constraint firstItem="or7-Xu-Ila" firstAttribute="top" secondItem="Mnt-9R-pkS" secondAttribute="bottom" constant="1" id="ozK-rl-dwX"/>
-                            <constraint firstItem="CTQ-ex-EU0" firstAttribute="centerX" secondItem="PCL-in-h24" secondAttribute="centerX" constant="1" id="qcQ-lF-S1g"/>
-                            <constraint firstItem="or7-Xu-Ila" firstAttribute="top" secondItem="PCL-in-h24" secondAttribute="bottom" constant="44" id="r7a-xZ-64H"/>
-                            <constraint firstItem="Mnt-9R-pkS" firstAttribute="leading" secondItem="or7-Xu-Ila" secondAttribute="leading" id="u6c-oQ-THC"/>
-                            <constraint firstItem="Gho-Vp-BHL" firstAttribute="leading" secondItem="bID-KU-DyS" secondAttribute="leadingMargin" constant="-16" id="zED-Qb-NfU"/>
+                            <constraint firstItem="Mnt-9R-pkS" firstAttribute="top" secondItem="PCL-in-h24" secondAttribute="bottom" constant="22" id="i7I-LY-5Zc"/>
+                            <constraint firstItem="Mnt-9R-pkS" firstAttribute="centerX" secondItem="PCL-in-h24" secondAttribute="centerX" id="qUD-Ts-trf"/>
+                            <constraint firstItem="CTQ-ex-EU0" firstAttribute="leading" secondItem="bID-KU-DyS" secondAttribute="leading" constant="209" id="ryN-jy-NYn"/>
+                            <constraint firstAttribute="trailing" secondItem="PCL-in-h24" secondAttribute="trailing" id="vqR-Xt-sET"/>
+                            <constraint firstItem="Gho-Vp-BHL" firstAttribute="top" secondItem="bID-KU-DyS" secondAttribute="top" id="wHF-tl-KxT"/>
+                            <constraint firstItem="UjX-ot-vew" firstAttribute="top" secondItem="awu-qY-Xxf" secondAttribute="bottom" constant="25" id="wRz-0H-UAa"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
